VOA-3590 Upgrade VOA Contact Forms libs and plugins